fix: after upgrade to 22.05 some icons in waybar were way too small
^SF-47 Fixed

^SF-48 Fixed

--- a/modules/waybar/waybar.style.css
+++ b/modules/waybar/waybar.style.css
@@ -1,7 +1,6 @@
 * {
-    /* `otf-font-awesome` is required to be installed for icons */
-    /* font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif; */
-    font-size: 13px;
+    font-size: 15px;
+    font-family: Roboto, JetBrainsMono Nerd Font
 }
 
 .modules-left {
